2009-11-10  Ozan Çağlayan <ozan_at_pardus.org.tr>
	* (setup.py): Port to distutils,
	* scripts/: Move standalone scripts under scripts/,
	* TODO: Update TODO file,
	* (buildfarm/utils.py): Use pisi.api.ctx.const class instead of hardcoding
	constant values.
	* (buildfarm/twit.py): Add new transparent Twitter class to send buildfarm
	updates.
	* (data/buildfarm.conf): Add INI style configuration file for buildfarm
	which will be used instead of importing the config module.

2009-11-09  Ozan Çağlayan <ozan_at_pardus.org.tr>
	* ChangeLog: New file
	* setup.py: Add setup.py and prepare for 2.0,
	* examples/: Rename exampleRepo to examples and README,
	* src/: Move all *.py files under src for a cleaner hierarchy.