@@ -10,85 +10,20 @@
 #
 # Please read the COPYING file.
 
-# Basic buildfarm configuration.
-#
-# Workdir
-workDir          = "/var/pisi/"
+import ConfigParser
 
-# Local source repo
-localPspecRepo   = "/root/2009"
+class Config(object):
+    """Configuration class for /etc/buildfarm/buildfarm.conf."""
+    def __init__(self, conf_file="/etc/buildfarm/buildfarm.conf"):
+        self.__items = dict()
 
-# Main buildfarm log
-logFile          = "/var/cache/pisi/buildfarm.log"
+        self.configuration = ConfigParser.ConfigParser()
+        self.configuration.read(conf_file)
+        self.read()
 
-# All package logs are kept in this directory as
-# package_name-log.
-outputDir        = "/var/cache/pisi/buildlogs/"
+    def read(self):
+        for s in self.configuration.sections():
+            self.__items.update(dict(self.configuration.items(s)))
 
-# This repo contains all binaries and deltas built
-binaryPath       = "/var/cache/pisi/packages/"
-
-# This repo contains latest binaries and 3 deltas -
-# one delta from iso release to latest binary, two deltas
-# from previus releases.
-testPath         = "/var/cache/pisi/packages-test/"
-
-# This repo contains only the latest binaries and deltas.
-# It seems that it's not used anymore
-deltaPath        = "/var/cache/pisi/packages-delta/"
-
-# This repo contains only the dbginfo packages
-# Set debugSupport to 'True' for managing a separate
-# debug repository in debugPath.
-debugSupport     = False
-debugPath        = "/var/cache/pisi/packages-debug/"
-
-# Don't execute check() function of the packages
-ignoreCheck      = True
-
-# Information for mailer module.
-# Edit templates.py for the structure of mails.
-
-# Set this to 'False' for turning off notification e-mails
-sendEmail        = True
-
-# Default from address
-mailFrom         = "buildfarm@pardus.org.tr"
-
-# This address is used for automated reports
-announceAddr     = "buildfarm@pardus.org.tr"
-
-# This is the default CC address for all info and error mails
-# Error mails are sent to package maintainer and CC'ed to this address,
-# info mails have no 'TO' address, only this one as a 'CC'.
-ccList           = ["buildfarm@pardus.org.tr"]
-
-# Server for sending mail.
-smtpServer       = "mail.pardus.org.tr"
-
-# Create and edit mailauth.py for authentication if needed
-# Set this to 'False' for not authenticating on the SMTP server
-useSmtpAuth      = sendEmail and True
-
-# Set this to 'False' if you don't want to generate delta packages
-generateDelta    = True
-
-# Blacklist for delta packages. Buildfarm will never build
-# delta packages for them.
-# module-* will match all package names starting with module-
-
-deltaBlacklist   = ["skype",
-                    "eclipse-jdt-binary",
-                    "flashplugin",
-                    "kernel",
-                    "kernel-rt",
-                    "kernel-pae",
-                    "kernel-debug",
-                    "kernel-firmware",
-                    "lzma",
-                    "module-*",
-                    "openarena-data",
-                    "pisi",
-                    "package-manager",
-                    "vdrift-data-full"]
-
+    def __getattr__(self, attr):
+        return self.__items.get(attr, None)
